Fix SetAllowedOrigins List